2015 JBOSS KOREA MEETUP CODE

--- a/SPRING4_SERVLET3/src/main/resources/messages/messages_en.properties
+++ b/SPRING4_SERVLET3/src/main/resources/messages/messages_en.properties
@@ -5,7 +5,7 @@ layout.lang.french=French
 
 message.welcome=Welcome to mvc base. This servlet was initialized with spring 4.1.4 AbstractAnnotationConfigDispatcherServletInitializer
 message.home.instructions=Type an empty message to see a custom validation message
-message.home.learnMore=Learn more &raquo;
+message.home.learnMore=full source;
 message.typeMessage=Type a message
 message.youWrote=You wrote : {0}
 
